@@ -1,7 +1,7 @@
 QPKG_NAME="SortMyQPKGs"
-QPKG_VER="181113"
+QPKG_VER="181217"
 QPKG_AUTHOR="OneCD"
-QPKG_SUMMARY="An automatic sorter for installed QPKGs to ensure they launch in a preset sequence when your NAS next boots-up"
+QPKG_SUMMARY="A sorter for your installed QPKGs to ensure they launch in a preset order when your NAS next boots-up."
 QPKG_RC_NUM="500"
 QPKG_SERVICE_PROGRAM="sort-my-qpkgs.sh"
 QTS_MINI_VERSION="4.0.0"
