@@ -1,3 +1,8 @@
+* Minor update: (181217)
+- Added [QJDK11 PlexPlayer Windscribe] to the ALPHA list.
+- Added [RunLast] to the OMEGA list.
+- Move source list display location.
+
 * Minor update: (181113)
 - Added [netmgr] to the ALPHA list.
 - Small processing speed improvements.
